--- a/5_1_10.html
+++ b/5_1_10.html
@@ -1,4 +1,12 @@
 <!-- 하이퍼링크 태그 <a>
-    하이퍼링크를 클릭하는 순간 다른페이지로 이동할 수 있다 .-->
+    하이퍼링크를 클릭하는 순간 다른페이지로 이동할 수 있다 .
+    실제로 실행했을 떄는 <a> ~ </a> 사이에 있는 컨텐츠가 출력
+    태그의 본질은 다른 정보를 꾸미기 위한것이다 .
+    문서의 본질적은 정보는 생능출판사 라는 문구이다.
+    실행화면에서 생능출판사 문구를 출력하면 생능 출판사의 홈페이지로 이동한다 .
+    href의 url을 변경하면 다른사이트로 이동할 수 있으며 
+    <a>~</a> 사이에 기재된 문구를 변경하면 실행했을 때 표시되는 글자를 변경할 수 있다 .
+    -->
+    
     <a href= "http://booksr.co.kr">생능출판사</a> <br>
   
