--- a/8_2_1.html
+++ b/8_2_1.html
@@ -2,8 +2,9 @@
     .myGrid {
         display: grid;
         /*fraction의 약자로 부분, 일부를 의미
-        1:1 비율로 공간을 차지하겠다. */
-        grid-template-columns: 1fr 1fr;
+        1:1 비율로 공간을 차지하겠다. 'n'fr:'n'fr 
+        px로 표기시 'n'px 만큼만 차지한다 */
+        grid-template-columns: 100px 1fr;
     }
 
     #first {
