--- a/8_1_14.html
+++ b/8_1_14.html
@@ -1,9 +1,10 @@
 <style>
     .first{
-        display: inline;
+        display: inline; /* inline : 한줄로 늘어서있는것 , 혹은 직렬을 의미한다 . 
+        display 속성의 속성값으로 inline을 지정하면 줄바꿈을 유발하지 않게된다 */
     }
 
-    .second{
+    .second{ /*block 을 입력하면  줄바꿈이 실행된다 .*/
         display: block;
         border : 1px solid red; 
     }
