--- a/instagram0904.html
+++ b/instagram0904.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
     <link href="style.css" rel='stylesheet'>
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" />
 </head>
@@ -12,7 +13,7 @@
 <body>
     <div id="top">
         <div id="top_img">
-            <img src="image/KakaoTalk_20240903_121031083.png" >
+            <img src="image/KakaoTalk_20240903_121031083.png">
         </div>
         <input type="search" value="🔍검색">
 
@@ -28,19 +29,22 @@
             <img src="image/profile.jpg" class="circle_pic">
         </div>
         <div id="profile_info">
-            <div id="id">half_bottle <i class="fas fa-cog"></i></div>
+            <div id="id"> 
+                <span>half_bottle</span> 
+                <i class="fas fa-cog"></i>
+            </div>
             <button>프로필 편집</button>
         </div>
     </div>
 
     <div>
         <p>
-            <strong>
+            <strong id="userInfo">
                 반병현(Bynghyun Ban)<br />
             </strong>
-            작가
+           <span id="summary">작가</span> 
         </p>
-        <p>
+        <p id="profileDetail">
             <a href="https://needleworm.github.io">
                 needleworm.github.io
             </a>
